--- a/Enter.UI/_Imports.razor
+++ b/Enter.UI/_Imports.razor
@@ -1,1 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Enter.UI.Components.Controllers
+@using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Rendering
