--- a/Enter.Dashboard/Pages/Counter.razor
+++ b/Enter.Dashboard/Pages/Counter.razor
@@ -2,11 +2,14 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<div class="m-4 p-4 bg-white border">
+    <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+    <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+</div>
+
 
 @code {
     private int currentCount = 0;
