--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -1,9 +1,12 @@
 ﻿@page "/"
+@using Enter.UI.Services.Contracts;
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<EntMdiTab ItemDirection="EntTabItemDirection.Horizontal"
+           Direction="EntTabDirection.Vertical">
+   
+</EntMdiTab>
+
