--- a/Enter.Dashboard/_Imports.razor
+++ b/Enter.Dashboard/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Enter.UI.Components.Layout
-@using Enter.UI.Components.Inputs
+@using Enter.UI.Components.Controllers
+@using Enter.UI.Components
 @using Enter.Dashboard.Shared
