--- a/Enter.Dashboard/wwwroot/css/app.css
+++ b/Enter.Dashboard/wwwroot/css/app.css
@@ -1,9 +1,13 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+body,html {
+    height: 100%;
 }
 
+#app {
+    height: 100%;
+}
 h1:focus {
     outline: none;
 }
