--- a/Enter.UI/wwwroot/scss/enter.scss
+++ b/Enter.UI/wwwroot/scss/enter.scss
@@ -1,6 +1,23 @@
 @import "_normalize.scss";
 @import "_variables.scss";
+@import "fonts";
+html,
+body {
+  font-size: $font-size;
+  font-family: Vazirmatn;
+  color: map-get($map: $colors, $key: mute);
+}
 
+* {
+  box-sizing: border-box !important;
+}
+[dir="rtl"] body {
+  direction: rtl;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
 @each $utility, $config in $utilities {
   $properties: map-get($config, property);
   $propertiesRtl: map-get($config, propertyRtl);
@@ -8,53 +25,82 @@
   $values: map-get($config, values);
 
   @each $size, $value in $values {
-
-    .#{$cssName}-#{$size} {
+    @if $size != null {
+      $size: -#{$size};
+    } @else {
+      $size: "";
+    }
+    .#{$cssName}#{$size} {
       @each $property in $properties {
         #{$property}: $value;
       }
     }
 
-    [dir="rtl"] .#{$cssName}-#{$size} {
+    [dir="rtl"] .#{$cssName}#{$size} {
       @each $property in $propertiesRtl {
         #{$property}: $value;
-      } 
+      }
     }
-    .rtl\:#{$cssName}-#{$size} {
+    .rtl\:#{$cssName}#{$size} {
       @each $property in $propertiesRtl {
         #{$property}: $value;
-      } 
+      }
     }
-    
   }
 
   @if map-get($config, breakpoint) {
     @each $bp, $width in $breakpoints {
       @media (min-width: $width) {
         @each $size, $value in $values {
+          @if $size != null {
+            $size: -#{$size};
+          } @else {
+            $size: "";
+          }
 
-          .#{$bp}\:#{$cssName}-#{$size} {
+          .#{$bp}\:#{$cssName}#{$size} {
             @each $property in $properties {
               #{$property}: $value;
             }
           }
 
-
-          [dir="rtl"] .#{$bp}\:#{$cssName}-#{$size} {
+          [dir="rtl"] .#{$bp}\:#{$cssName}#{$size} {
             @each $property in $propertiesRtl {
               #{$property}: $value;
             }
           }
 
-          .rtl\:#{$bp}\:#{$cssName}-#{$size} {
+          .rtl\:#{$bp}\:#{$cssName}#{$size} {
             @each $property in $propertiesRtl {
               #{$property}: $value;
             }
           }
-
         }
       }
     }
   }
 }
 
+.divider-x > * {
+  border-inline-end: $border-width $border-style $border-color;
+}
+
+.divider-x > *:last-child {
+  border-inline-end: 0;
+}
+
+.divider-y > * {
+  border-bottom: $border-width $border-style $border-color;
+}
+
+.divider-y > *:last-child {
+  border-bottom: 0;
+}
+
+.border-x > * {
+  border-inline-end: $border-width $border-style $border-color;
+}
+
+.border-y > * {
+  border-bottom: $border-width $border-style $border-color;
+}
