--- a/Enter.Dashboard/_Imports.razor
+++ b/Enter.Dashboard/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.JSInterop
 @using Enter.UI.Components.Layout
 @using Enter.UI.Components.Controllers
+@using Enter.UI.Components.NavMenu
 @using Enter.UI.Components
 @using Enter.Dashboard.Shared
