--- a/Enter.UI/Components/EntTab.razor
+++ b/Enter.UI/Components/EntTab.razor
@@ -1,18 +1,21 @@
 ﻿@inherits EntTabBase
 <CascadingValue Value="@this">
-    <div class="@tabCssClass">
+    <div @attributes="@Attributes" class="@RootCss" style="@Style">
         @if (TabPanels.Count > 0)
         {
             <ul class="ent-tab-item-container">
                 @foreach (var tabPanels in TabPanels)
                 {
-                    var activeClass = (IsActivePanel(tabPanels.TabId) ? "active " + ActiveClass : "");
-                    <li class="@tabItemCssClass @activeClass" @onclick="()=>ActiveTab(tabPanels.TabId)">
+                    var activeClass = (IsActivePanel(tabPanels.Id) ? "active " + ActiveClass : "");
+
+                    <li class="@ItemCss @activeClass" @onclick="()=>ActiveTab(tabPanels.Id)" @key="@tabPanels.Id">
+
                         <EntIcon Data="@tabPanels.Icon.Data" Type="@tabPanels.Icon.Type" />
+
                         <span>@tabPanels.Title</span>
                         @if (Closeable)
                         {
-                            <div @onclick="()=>OnTabClose(tabPanels.TabId)" class="ent-tab-btn-close">
+                            <div @onclick="()=>OnTabClose(tabPanels.Id)" class="ent-tab-btn-close">
                                 <EntIcon Data="fa-light fa-close" Type="EntIconType.IconTag" />
                             </div>
                         }
@@ -27,7 +30,7 @@
             </div>
         }
 
-        <div class="@tabPanelCssClass">
+        <div class="@PanelCss">
             @ChildContent
         </div>
     </div>
