--- a/Enter.Dashboard/App.razor
+++ b/Enter.Dashboard/App.razor
@@ -1,4 +1,5 @@
 ﻿@using Enter.Dashboard.Shared
+@namespace Enter.Dashboard
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
