--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -3,13 +3,11 @@
 
 <PageTitle>Index</PageTitle>
 
-
-
 <EntMdiTab ItemDirection="EntTabItemDirection.Horizontal"
            KeepPanelAlive="true"
            ActiveClass="bg-light"
            Closeable
-           Direction="EntTabDirection.Vertical" Class="border-0">
+           Direction="EntTabDirection.Vertical" class="border-0">
    
 </EntMdiTab>
 
