--- a/Enter.UI/_Imports.razor
+++ b/Enter.UI/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@using Enter.UI.Bases
-@using Enter.UI.Components.Controllers
+@using Enter.UI.Components
+@using Enter.UI.Core
+@using Enter.UI.Core.Bases
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Rendering
