--- a/Enter.UI/wwwroot/scss/components/_ent_tab.component.scss
+++ b/Enter.UI/wwwroot/scss/components/_ent_tab.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   height: 100%;
   border: $border;
+  background-color: #fff;
   > .ent-tab-item-container-message {
     display: flex;
     align-items: center;
@@ -51,7 +52,7 @@
 
   > .ent-tab-panel-container {
     flex-grow: 1;
-
+  background-color: #f2f2f2;
     &.ent-tab-panel-container-collapse {
       display: none;
       border: 0;
