--- a/Enter.UI/Components/AppBar/EntAppBar.razor
+++ b/Enter.UI/Components/AppBar/EntAppBar.razor
@@ -2,8 +2,8 @@
 @namespace Enter.UI.Components
 @using Enter.UI.Core;
 <div @attributes="@Attributes" style="@Style" class="@cssClass">
-    <b class="cl-mute">@Title</b>
-    @ChildContent
+    <b class="ent-app-bar-title">@Title</b>
+    <div class="ent-app-bar-content">@ChildContent</div>
 </div>
 
 @code {
@@ -14,6 +14,9 @@
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
+
+    [Parameter]
+    public RenderFragment EndContent { get; set; } = default!;
 
     [Parameter]
     public string Title { get; set; }
