--- a/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -1,5 +1,5 @@
 ﻿@inherits EntTabBase
-
+@namespace Enter.UI.Components
 <EntTab @ref="Tab"
         @attributes="@Attributes"
         ItemClass="@ItemClass"
