--- a/Enter.UI/wwwroot/scss/components/_components.scss
+++ b/Enter.UI/wwwroot/scss/components/_components.scss
@@ -1,3 +1,4 @@
-﻿@import "ent_tab.component";
+﻿@import "button.component";
+@import "ent_tab.component";
 @import "ent_app_bar.component";
 @import "ent_nav_menu.component";
