--- a/Enter.UI/wwwroot/scss/_core.scss
+++ b/Enter.UI/wwwroot/scss/_core.scss
@@ -4,7 +4,7 @@
   $cssName: map-get($config, cssName);
   $values: map-get($config, values);
 
-  @each $size, $value in $values { 
+  @each $size, $value in $values {
     @if $size != null {
       $size: -#{$size};
     } @else {
@@ -60,3 +60,57 @@
     }
   }
 }
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -0.5rem;
+  > * {
+    width: 100%;
+    padding: 0 0.5rem;
+  }
+}
+@for $i from 1 through 12 {
+  .col-#{$i} {
+    flex: 0 0 auto;
+    width: calc(#{$i} / 12 * 100%);
+  }
+  @each $bp, $width in $breakpoints {
+    @media (min-width: $width) {
+     
+      .#{$bp}\:col-#{$i} {
+        width: calc(#{$i} / 12 * 100%);
+        flex: 0 0 auto;
+      }
+    } 
+  }
+}
+
+
+$extra-column: (
+        1\/2: calc(1 / 2 * 100%),
+        1\/4: calc(1 / 4 * 100%),
+        1\/3: calc(1 / 3 * 100%),
+        1\/6: calc(1 / 6 * 100%),
+        2\/3: calc(2 / 3 * 100%),
+        3\/4: calc(3 / 4 * 100%),
+        5\/6: calc(5 / 6 * 100%),
+);
+
+
+@each $key, $w in $extra-column {
+  .col-#{$key} {
+    flex: 0 0 auto;
+    width: $w;
+  }
+
+  @each $bp, $width in $breakpoints {
+    @media (min-width: $width) {
+
+      .#{$bp}\:col-#{$key}{
+        flex: 0 0 auto;
+        width: $w;
+      }
+    }
+  }
+}
+
