--- a/Enter.UI/wwwroot/scss/enter.scss
+++ b/Enter.UI/wwwroot/scss/enter.scss
@@ -2,9 +2,9 @@
 @import "_variables.scss";
 @import "_core.scss";
 @import "_mixins.scss";
+
 html,
 body {
-  font-size: $font-size;
   color: map-get($map: $colors, $key: mute);
   background-color: #f2f2f2;
 }
@@ -12,14 +12,57 @@ body {
 * {
   box-sizing: border-box !important;
 }
+
 [dir="rtl"] body {
   direction: rtl;
 }
 
+
+p {
+  margin-bottom: map-get($font-sizes, "medium");
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: map-get($font-sizes, "title-lg");
+}
+
+h2 {
+  font-size: map-get($font-sizes, "title");
+}
+
+h3 {
+  font-size: map-get($font-sizes, "title-sm");
+}
+
+h4 {
+  font-size: map-get($font-sizes, "medium-lg");
+}
+
+h5 {
+  font-size: map-get($font-sizes, "medium")
+}
+
+h6 
+{
+  font-size: map-get($font-sizes, "medium-sm")
+}
+
+small, .text_small {
+  font-size: map-get($font-sizes, "subtitle")
+}
+
+
 .cursor-pointer {
   cursor: pointer;
 }
-
 
 
 .divider-x > * {
@@ -47,5 +90,13 @@ body {
 }
 
 
+.ent-input {
+
+    width: 100%;
+    background-color: #f8f8f8;
+    border: $border;
+    padding: 0.35rem 1rem;  
+
+}
 
 @import "components/components";
