--- a/Enter.UI/wwwroot/scss/components/_components.scss
+++ b/Enter.UI/wwwroot/scss/components/_components.scss
@@ -1,4 +1,5 @@
 ﻿@import "button.component";
 @import "ent_tab.component";
 @import "ent_app_bar.component";
+@import "card.component";
 @import "ent_nav_menu.component";
