--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -1,30 +1,29 @@
-﻿<div class="m-4 bg-white p-4">
-    <EditForm class="ent-edit-form" Model="Input" OnSubmit="() => { }">
-        <div class="row">
-            <div class="tablet:col-1/3 mb-4">
-                <label class="d-block fs-medium-sm mb-2">نام</label>
-                <InputText class="ent-input" @bind-Value="Input.FirstName"/>
+﻿<EntCard class="m-4">
+    <Header>صفحه فرم</Header>
+    <Content>
+        <EditForm class="ent-edit-form" Model="Input" OnSubmit="() => { }">
+            <div class="row">
+                <div class="tablet:col-1/3 mb-4">
+                    <label class="d-block fs-medium-sm mb-2">نام</label>
+                    <InputText class="ent-input" @bind-Value="Input.FirstName"/>
+                </div>
+                <div class="tablet:col-1/3 mb-4">
+                    <label class="d-block fs-medium-sm mb-2">نام خانوادگی</label>
+                    <InputText class="ent-input" @bind-Value="Input.LastName"/>
+                </div>
+                <div class="tablet:col-1/3 mb-4">
+                    <label class="d-block fs-medium-sm mb-2">سن</label>
+                    <InputNumber class="ent-input" @bind-Value="Input.Age"/>
+                </div>
             </div>
-            <div class="tablet:col-1/3 mb-4">
-                <label class="d-block fs-medium-sm mb-2">نام خانوادگی</label>
-                <InputText class="ent-input" @bind-Value="Input.LastName"/>
+            <div class="row">
+                <div class="tablet:col-1/3">
+                    <EntButton type="submit">ارسال</EntButton>
+                </div>
             </div>
-            <div class="tablet:col-1/3 mb-4">
-                <label class="d-block fs-medium-sm mb-2">سن</label>
-                <InputNumber class="ent-input" @bind-Value="Input.Age"/>
-            </div>
-        </div>
-        <div class="row">
-            <div class="tablet:col-1/3">
-                <EntButton type="submit">ارسال</EntButton>
-            </div>
-        </div>
-
-        
-        
-    </EditForm>
-</div>
-
+        </EditForm>
+    </Content>
+</EntCard>
 @code {
 
     public class InputModel
