--- a/Enter.UI/Components/NavMenu/EntNavMenu.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenu.razor
@@ -1,5 +1,7 @@
 ﻿@namespace Enter.UI.Components
 @inherits Enter.UI.Core.Bases.EntBaseComponent
-<div @attributes="Attributes" class="@RootCss" style="@Style">
-    @ChildContent
-</div>
+<CascadingValue Value="@this">
+    <div @attributes="Attributes" class="@RootCss" style="@Style">
+        @ChildContent
+    </div>
+</CascadingValue>
