--- a/Enter.UI/Components/Tabs/EntTab.razor
+++ b/Enter.UI/Components/Tabs/EntTab.razor
@@ -9,15 +9,15 @@
                 {
                     var activeClass = (IsActivePanel(tabPanels.Id) ? "active " + ActiveClass : "");
 
-                    <li class="@ItemCss @activeClass" @onclick="()=>ActiveTab(tabPanels.Id)" @key="@tabPanels.Id">
-
-                        <EntIcon Data="@tabPanels.Icon" Type="@tabPanels.IconType" />
-
-                        <span>@tabPanels.Title</span>
+                    <li class="@ItemCss @activeClass" @onclick="() => ActiveTab(tabPanels.Id)" @key="@tabPanels.Id">
+                        <div class="ent-tab-content">
+                            <EntIcon Data="@tabPanels.Icon" Type="@tabPanels.IconType"/>
+                            <span>@tabPanels.Title</span>
+                        </div>
                         @if (Closeable)
                         {
-                            <div @onclick="()=>OnTabClose(tabPanels.Id)" class="ent-tab-btn-close">
-                                <EntIcon Data="fa-light fa-close" Type="EntIconType.IconTag" />
+                            <div @onclick="() => OnTabClose(tabPanels.Id)" class="ent-tab-close">
+                                <EntIcon Data="fa-light fa-close" Type="EntIconType.IconTag"/>
                             </div>
                         }
                     </li>
