--- a/Enter.UI/wwwroot/scss/_core.scss
+++ b/Enter.UI/wwwroot/scss/_core.scss
@@ -93,7 +93,7 @@ $extra-column: (
         1\/6: calc(1 / 6 * 100%),
         2\/3: calc(2 / 3 * 100%),
         3\/4: calc(3 / 4 * 100%),
-        5\/6: calc(5 / 6 * 100%),
+        5\/6: calc(5 / 6 * 100%)
 );
 
 
