--- a/Enter.UI/wwwroot/scss/components/_ent_card.component.scss
+++ b/Enter.UI/wwwroot/scss/components/_ent_card.component.scss
@@ -2,19 +2,20 @@
   display: flex;
   flex-direction: column;
   border:$border;
+  background-color: #fff;
+  
   > .ent-card-header {
-    padding: 1rem;
-    background-color: map-get($colors,"bg-light");
+    padding: 1rem; 
+    border-bottom: $border;
   }
 
   > .ent-card-content {
     padding: 1rem;
-    background-color: #fff;
   }
 
   > .ent-card-footer {
     padding: 1rem;
-    background-color: map-get($colors,"bg-light");
-  }
+    border-top: $border;
+  } 
   
 }
