--- a/Enter.UI/Components/Icon/EntIcon.razor
+++ b/Enter.UI/Components/Icon/EntIcon.razor
@@ -1,24 +1,20 @@
 ﻿@inherits EntBaseComponent
 @namespace Enter.UI.Components
 
+<div onclick="@Click" style="@Style" @attributes="Attributes" class="@RootCss">
+    @if (Type == EntIconType.IconTag)
+    {
+        <i class="@Data"></i>
+    }
+    else if (Type == EntIconType.ImageTag)
+    {
+        <img  src="@Data" />
+    }
+    else if (Type == EntIconType.SvgContent)
+    {
+        <svg>
+            @Data
+        </svg>
+    }
 
-@if (Type == EntIconType.IconTag)
-{
-    <i style="@Style" @attributes="Attributes" class="@RootCss @Data"></i>
-}else if (Type == EntIconType.ImageTag)
-{
-    <img style="@Style" @attributes="Attributes" class="@RootCss" src="@Data" />
-
-}else if(Type == EntIconType.SvgContent)
-{
-    <svg style="@Style" @attributes="Attributes" class="@RootCss">
-        @Data
-    </svg>
-}
-
-
-
-
-
-
-
+</div>
