--- a/Enter.UI/Components/Modal/EntModalProvider.razor
+++ b/Enter.UI/Components/Modal/EntModalProvider.razor
@@ -1,20 +1,21 @@
 ﻿@namespace Enter.UI.Components
-@{
-    var style = _modalService.Items.Any() ? "" : "d-none";
-}
-<div class="ent-modal-provider @style">
+
+<div class="ent-modal-provider ">
     @foreach (var item in @_modalService.Items)
     {
-       
-             <div class="ent-modal">
-                        <div class="ent-modal-header">
-                            @item.Title
-                        </div>
-                        <div class="ent-modal-content">
-                            <DynamicComponent Type="@item.Type" Parameters="@item.Parameters" />
-                        </div>
-                    </div>
-       
+        <CascadingValue Value="item" IsFixed="true">
+    <div class="ent-modal-container">
+        <div class="ent-modal">
+            <div class="ent-modal-header">
+                <b class="title">@item.Title</b>
+                <EntIcon class="icon" Click="()=>OnCloseClick(item.Key)" Type="EntIconType.IconTag" Data="fa-light fa-close"/>
+            </div>
+            <div class="ent-modal-content">
+                <DynamicComponent Type="@item.Type" Parameters="@item.Parameters"/>
+            </div>
+        </div>
+    </div>
+    </CascadingValue>
     }
 </div>
 
@@ -22,23 +23,34 @@
 
     [Inject]
     private IModalService ModalService { get; set; }
+
     private ModalService _modalService { get; set; }
-    
-    
-    
+
+
     protected override async Task OnInitializedAsync()
     {
-        _modalService = (ModalService) ModalService ?? throw new InvalidOperationException("AddEnterUI is not added to your program.cs");
+        _modalService = (ModalService)ModalService ?? throw new InvalidOperationException("AddEnterUI is not added to your program.cs");
 
         await base.OnInitializedAsync();
-        
-        _modalService.OnModalShowed += ModalServiceOnOnModalShowed;
 
+        _modalService.OnModalShowed += ModalServiceOnOnModalShowed;
+        _modalService.OnModalClosed += ModalServiceOnOnModalClosed;;
+    }
+
+    private void ModalServiceOnOnModalClosed(string obj)
+    {
+        StateHasChanged();
     }
 
     private void ModalServiceOnOnModalShowed(string obj)
     {
         StateHasChanged();
+    }
+    
+    
+    private async Task OnCloseClick(string id)
+    {
+        await _modalService.CloseAsync(id);
     }
 
 }
