--- a/Enter.UI/wwwroot/scss/components/_ent_modal.component.scss
+++ b/Enter.UI/wwwroot/scss/components/_ent_modal.component.scss
@@ -1,17 +1,44 @@
 ﻿
 .ent-modal-provider {
-  position: relative;
+
+}
+.ent-modal-container {
+  display: flex;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: #3333;
+  
   .ent-modal {
-    position: absolute;
-    left: auto;
-    right: auto;
-    bottom: auto;
-    top: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
     width: 400px;
     background-color: white;
+
+    .ent-modal-header {
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      font-size: map-get($font-sizes,"medium-lg");
+      border-bottom: $border;
+
+      .title {
+        flex-grow: 1;
+       
+      }
+      
+      .icon {
+        cursor: pointer;
+        font-size: map-get($font-sizes,"title");
+      }
+      
+    }
+
+    .ent-modal-content {
+      padding: 1rem;
+    }
   }
 }
- 
